--- a/bankingProject/bankingApp/templates/register.html
+++ b/bankingProject/bankingApp/templates/register.html
@@ -7,11 +7,14 @@
       <title>Register</title>
     </head>
     <body>
-
+        <div class="title-container">
+            <h2 class="name">App Name</h2>
+       </div>
     {% if request.user.is_authenticated %}
         <p>You are currently logged in as {{request.user.username}} | <a href="{% url 'logout' %}">Logout</a> </p>
     {% endif %}
-        <h1>Register</h1>
+    <div class="container">
+        <h1 class="register">Register</h1>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
             {% for x in register %}
@@ -26,10 +29,40 @@
             </form>  
             <div class="account">Account already exists? <a href="{% url 'login' %}">Here</a> </div>
             <h1>
+    </div>
     </body>
 </head>
 </html>
 <style>
+
+.register{
+    text-align:center;
+    
+}
+.container{
+    margin-top:1%;
+    background-color:white;
+    color:black;
+    border:solid black 2px;
+    border-radius:2%;
+    }
+input{
+    width:50%;
+    margin-left: 2%;
+    padding:1%;
+    margin-bottom:2%;
+    border: solid 1px black;
+}
+
+button{
+    margin-top: 2%;
+    width: 30%;
+    margin-left: 10%;
+    border:solid black 2px;
+    background-color:white;
+    color:black;
+    padding:1%;
+}
 form{
     width:100%;
     display:flex;
@@ -37,11 +70,22 @@ form{
 }
 .fields{
     flex-grow: 1;
-    width:100%;
 }
-
 .account{
     font-weight: bold;
 }
+body{
+    background-color:#02093B;
+  }
+
+  .name{
+    text-align:center;
+    color:white;
+  }
+  .title-container{
+    background-color:black;
+    padding:1%;
+    border-radius:3%;
+  }
 
 </style>
