--- a/bankingApp/templates/home.html
+++ b/bankingApp/templates/home.html
@@ -98,16 +98,10 @@
           <h3 class="lead">Follow us</h3>
           <ul class="list-unstyled">
             <li>
-              <a href=""><i class="bi bi-facebook"></i></a>
+              <a href="https://github.com/ritik0002"><i class="bi bi-github"></i></a>
             </li>
             <li>
-              <a href=""><i class="bi bi-instagram"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="bi bi-youtube"></i></a>
+              <a href="https://www.linkedin.com/in/ritik-desai-344191196/"><i class="bi bi-linkedin"></i></a>
             </li>
           </ul>
     
@@ -283,6 +277,11 @@ a,.link{
   right:0;
   width:60px;
   height:50px;
+}
+
+.bi{
+  color:white;
+  font-size: 1.7em;
 }
 
 </style>
